# online_shop_bot

./: README.md  pyproject.toml
admin_panel/: .env-empty  init.sh  requirements.txt
admin_panel/config/: settings.py  urls.py
admin_panel/panel/migrations/: 0001_initial.py
bot/: requirements.txt
bot/src/: config.py  init.py  main.py  server.py
bot/src/cart/: router.py
bot/src/db/: config.py  repository.py
bot/src/handlers/: start.py
bot/src/products/: router.py
bot/src/tasks/: promo.py
