[project]
name = "payments"
version = "0.1.0"
description = "Payments Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "apscheduler==3.11.0",
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "click==8.2.1",
    "colorama==0.4.6 ; platform_system == 'Windows'",
    "dependency-injector==4.47.1",
    "django==5.2.1",
    "et-xmlfile==2.0.0",
    "frozenlist==1.6.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.4.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "psycopg-binary==3.2.9 ; implementation_name != 'pypy'",
    "psycopg-pool==3.2.6",
    "psycopg[binary,pool]==3.2.9",
    "pydantic-core==2.33.2",
    "pydantic==2.11.5",
    "python-decouple==3.8",
    "python-slugify==8.0.4",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2 ; sys_platform == 'win32' or platform_system == 'Windows'",
    "tzlocal==5.3.1",
    "yarl==1.20.0",
]
